--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
+    "gitmoji-cli": "^4.8.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
